implement skroutz feed service